@@ -17,6 +17,7 @@ Changes
 - added support for passing arguments to tasks on cmd line
 - added command line option --dir (-d) to set current working directory
 - removed dodo-sample sub-command
+- added task field 'verbosity'
 
 
 0.4.0 (*2009-10-05*)
